<resources>
    <string name="alert_cant_open_title">Can\'t open app</string>
    <string name="alert_cant_open_message">Want to change its settings?</string>
    <string name="toast_cant_open_message">Open settings to choose an action for this gesture</string>
    <string name="toast_no_assistant_app">No assistant app is set</string>
    <string name="snackbar_cant_open_message">The gesture %1$s has no assigned action</string>
    <string name="snackbar_cant_open_message_button">Choose</string>
    <string name="settings_title">Settings</string>
    <string name="settings_tab_actions">Actions</string>
    <string name="settings_tab_launcher">Launcher</string>
    <string name="settings_tab_meta">Meta</string>
    <string name="settings_gesture_back">Back</string>
    <string name="settings_gesture_description_back">Back button / back gesture</string>
    <string name="settings_gesture_up">Up</string>
    <string name="settings_gesture_description_up">Swipe up</string>
    <string name="settings_gesture_tap_up">Tap + Up</string>
    <string name="settings_gesture_description_tap_up">Tap and swipe up</string>
    <string name="settings_gesture_double_up">Double Up</string>
    <string name="settings_gesture_description_double_up">Swipe up with two fingers</string>
    <string name="settings_gesture_down">Down</string>
    <string name="settings_gesture_description_down">Swipe down</string>
    <string name="settings_gesture_tap_down">Tap + Down</string>
    <string name="settings_gesture_description_tap_down">Tap and swipe down</string>
    <string name="settings_gesture_double_down">Double Down</string>
    <string name="settings_gesture_description_double_down">Swipe down with two fingers</string>
    <string name="settings_gesture_left">Left</string>
    <string name="settings_gesture_description_left">Swipe left</string>
    <string name="settings_gesture_tap_left">Tap + Left</string>
    <string name="settings_gesture_description_tap_left">Tap and swipe left</string>
    <string name="settings_gesture_double_left">Double Left</string>
    <string name="settings_gesture_description_double_left">Swipe left with two fingers</string>
    <string name="settings_gesture_right">Right</string>
    <string name="settings_gesture_description_right">Swipe right</string>
    <string name="settings_gesture_tap_right">Tap + Right</string>
    <string name="settings_gesture_description_tap_right">Tap and swipe right</string>
    <string name="settings_gesture_double_right">Double Right</string>
    <string name="settings_gesture_description_double_right">Swipe right with two fingers</string>
    <string name="settings_gesture_right_top_edge">Right (Top)</string>
    <string name="settings_gesture_description_right_top_edge">Swipe right at the top of the screen</string>
    <string name="settings_gesture_right_bottom_edge">Right (Bottom)</string>
    <string name="settings_gesture_description_right_bottom_edge">Swipe right at the bottom of the screen</string>
    <string name="settings_gesture_left_bottom_edge">Left (Bottom)</string>
    <string name="settings_gesture_description_left_bottom_edge">Swipe left at the bottom of the screen</string>
    <string name="settings_gesture_left_top_edge">Left (Top)</string>
    <string name="settings_gesture_description_left_top_edge">Swipe left at the top of the screen</string>
    <string name="settings_gesture_up_left_edge">Up (Left Edge)</string>
    <string name="settings_gesture_description_up_left_edge">Swipe up at the left edge of the screen</string>
    <string name="settings_gesture_up_right_edge">Up (Right Edge)</string>
    <string name="settings_gesture_description_up_right_edge">Swipe up at the right edge of the screen</string>
    <string name="settings_gesture_down_left_edge">Down (Left Edge)</string>
    <string name="settings_gesture_description_down_left_edge">Swipe down at the left edge of the screen</string>
    <string name="settings_gesture_down_right_edge">Down (Right Edge)</string>
    <string name="settings_gesture_description_down_right_edge">Swipe down at the right edge of the screen</string>
    <string name="settings_gesture_slash">/</string>
    <string name="settings_gesture_description_slash">Top right -> bottom left</string>
    <string name="settings_gesture_slash_reverse">/ (Reverse)</string>
    <string name="settings_gesture_description_slash_reverse">Bottom left -> top right</string>
    <string name="settings_gesture_backslash">\\</string>
    <string name="settings_gesture_description_backslash">Top left -> bottom right</string>
    <string name="settings_gesture_backslash_reverse">\\ (Reverse)</string>
    <string name="settings_gesture_description_backslash_reverse">Bottom right -> top left</string>
    <string name="settings_gesture_swipe_larger"><![CDATA[>]]></string>
    <string name="settings_gesture_description_swipe_larger">Top left -> mid right -> bottom left</string>
    <string name="settings_gesture_swipe_larger_reverse"><![CDATA[> (Reverse)]]></string>
    <string name="settings_gesture_description_swipe_larger_reverse">Bottom left -> mid right -> top left</string>
    <string name="settings_gesture_swipe_smaller"><![CDATA[<]]></string>
    <string name="settings_gesture_description_swipe_smaller">Top right -> mid left -> bottom right</string>
    <string name="settings_gesture_swipe_smaller_reverse"><![CDATA[< (Reverse)]]></string>
    <string name="settings_gesture_description_swipe_smaller_reverse">Bottom right -> mid left -> top right</string>
    <string name="settings_gesture_swipe_v">V</string>
    <string name="settings_gesture_description_swipe_v">Top left -> bottom mid -> top right</string>
    <string name="settings_gesture_swipe_v_reverse">V (Reverse)</string>
    <string name="settings_gesture_description_swipe_v_reverse">Top right -> bottom mid -> top left</string>
    <string name="settings_gesture_swipe_lambda">Λ</string>
    <string name="settings_gesture_description_swipe_lambda">Bottom left -> top mid -> bottom right</string>
    <string name="settings_gesture_swipe_lambda_reverse">Λ (Reverse)</string>
    <string name="settings_gesture_description_swipe_lambda_reverse">Bottom right -> top mid -> bottom left</string>
    <string name="settings_gesture_vol_up">Volume Up Key</string>
    <string name="settings_gesture_description_vol_up">Press the volume up button</string>
    <string name="settings_meta_show_tutorial">View µLauncher Tutorial</string>
    <string name="settings_meta_reset">Reset Settings</string>
    <string name="settings_meta_view_code">View source code</string>
    <string name="settings_meta_report_bug">Report a bug</string>
    <string name="dialog_report_bug_info">Thank you for helping to improve μLauncher!\nPlease consider adding the following information to your bug report:</string>
    <string name="dialog_report_bug_button_clipboard">Copy to clipboard</string>
    <string name="dialog_report_bug_security_info">Please do not report security vulnerabilities publicly on GitHub, but use the following instead:</string>
    <string name="dialog_report_bug_button_security">Report a security vulnerability</string>
    <string name="settings_meta_fork_contact">Contact the developer of the fork</string>
    <string name="settings_meta_join_chat">Join μLauncher chat</string>
    <string name="settings_meta_donate">Donate</string>
    <string name="settings_meta_privacy">Privacy Policy</string>
    <string name="tutorial_concept_title">Concept</string>
    <string name="tutorial_concept_text">μLauncher is designed to be minimal, efficient and free of distraction.
        \n\nIt contains no ads and collects no data.</string>
    <string name="tutorial_concept_text_2">It is free software (MIT license)!\nMake sure to check out the repository!</string>
    <string name="tutorial_concept_label_version">Version</string>
    <string name="screen_lock_method_dialog_text"><![CDATA[
        <h1>Choose locking method</h1>
        There are two methods to lock the screen.
        Unfortunately both have downsides:<br/><br/>

        <h3>Device Admin</h3>
        Doesn\'t work with unlocking by fingerprint or face recognition.

        <br/>
        <br/>

        <h3>Accessibility Service</h3>
        Requires excessive privileges.
        μLauncher will use those privileges only for locking the screen.
        <br/>
        (You really should not trust a random app you just downloaded with such a claim, but you can check the <a href=\"https://github.com/jrpie/Launcher\">source code</a>.)
        <br/>
        On some devices, the start-up PIN will no longer be used for encrypting data after activating an accessibility service.
        This can be <a href="https://issuetracker.google.com/issues/37010136#comment36">reactivated</a> afterwards.

        <br/><br/><br/><br/>
        You can change your selection later in settings.
        ]]>
    </string>
    <string name="screen_lock_method_use_accessibility">Use Accessibility Service</string>
    <string name="screen_lock_method_use_device_admin">Use Device Admin</string>
    <string name="dialog_select_color_red">Red</string>
    <string name="dialog_select_color_alpha">Alpha</string>
    <string name="dialog_select_color_blue">Blue</string>
    <string name="dialog_select_color_green">Green</string>
    <string name="dialog_select_color_color_hex">Color</string>
    <string name="dialog_consent_accessibility_privileges">I am aware that this will grant far-reaching privileges to μLauncher.</string>
    <string name="dialog_consent_accessibility_other_options">I am aware that other options exist (using device administrator privileges or the power button).</string>
    <string name="dialog_consent_accessibility_consent">I consent to μLauncher using the accessibility service to provide functionality unrelated to accessibility.</string>
    <string name="dialog_consent_accessibility_data_collection">I consent to μLauncher not collecting any data.</string>
    <string name="dialog_consent_accessibility_text"><![CDATA[You are about to activate the accessibility service. This will grant <strong>far-reaching privileges</strong> to μLauncher.<br/>μLauncher will use these privileges <strong>only</strong> to perform the following actions:
    <ul>
        <li>Lock Screen</li>
        <li>Recent Apps</li>
    </ul>
     μLauncher <strong>will never collect any data</strong>. In particular, μLauncher does not use the accessibility service to collect any data.]]></string>
    <string name="settings_meta_licenses">Open Source Licenses</string>
    <string name="crash_info"><![CDATA[
        Looks like something went wrong, sorry about that!<br><br>
        For privacy reasons, crash logs are not collected automatically.<br>
        However logs are very useful for debugging, so I would be very grateful if you could send me the attached log by mail
        or create a bug report on github.<br><br>
        Note that crash logs might contain <strong>sensitive information</strong>, e.g. the name of an app you tried to launch.
        Please <strong>redact</strong> such information before sending the report.
        <h2>What can I do now?</h2>
        If this bug appears again and again, you can try several things:
        <ul>
        <li>Force stop μLauncher</li>
        <li>Clear μLauncher\'s storage (<strong>Your settings will be lost!</strong>)</li>
        <li>Install an older version (<a href=\"https://github.com/jrpie/Launcher/releases\">GitHub</a>, <a href=\"https://f-droid.org/en/packages/de.jrpie.android.launcher\">F-Droid</a>)</li>
        </ul>
        ]]>
    </string>
    <string name="report_crash_button_copy">Copy crash report to clipboard</string>
    <string name="report_crash_button_mail">Send report by mail</string>
    <string name="report_crash_button_report">Create bug report on GitHub</string>
    <string name="settings_meta_view_docs">Documentation</string>
</resources>