<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <de.jrpie.android.launcher.ui.util.HtmlTextView
            android:id="@+id/dialog_select_lock_method_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_lock_method_dialog_text"
            android:textColor="@android:color/black"
            android:layout_marginBottom="20dp"
            tools:ignore="VisualLintLongText" />

        <Button
            android:id="@+id/dialog_select_lock_method_button_device_admin"
            android:text="@string/screen_lock_method_use_device_admin"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/dialog_select_lock_method_button_accessibility"
            android:text="@string/screen_lock_method_use_accessibility"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:minHeight="48dp" />

    </LinearLayout>

</ScrollView>
