<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AlertDialogCustom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <EditText
        android:id="@+id/dialog_select_color_preview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:hint="@string/dialog_select_color_color_hex"
        android:autofillHints="color"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/max_button_width"
        tools:text="#ffbb00" />

    <TextView
        android:id="@+id/label_alpha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_select_color_alpha"
        app:layout_constraintTop_toBottomOf="@id/dialog_select_color_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/max_button_width" />

    <SeekBar
        android:id="@+id/dialog_select_color_seekbar_alpha"
        android:layout_height="48dp"
        android:layout_width="0dp"
        android:max="255"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/label_alpha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/max_button_width" />

    <TextView
        android:id="@+id/label_red"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_select_color_red"
        app:layout_constraintTop_toBottomOf="@id/dialog_select_color_seekbar_alpha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/max_button_width" />

    <SeekBar
        android:id="@+id/dialog_select_color_seekbar_red"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:max="255"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/label_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/max_button_width" />

    <TextView
        android:id="@+id/label_green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_select_color_green"
        app:layout_constraintTop_toBottomOf="@id/dialog_select_color_seekbar_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/max_button_width" />

    <SeekBar
        android:id="@+id/dialog_select_color_seekbar_green"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:max="255"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/label_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/max_button_width" />

    <TextView
        android:id="@+id/label_blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_select_color_blue"
        app:layout_constraintTop_toBottomOf="@id/dialog_select_color_seekbar_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/max_button_width" />

    <SeekBar
        android:id="@+id/dialog_select_color_seekbar_blue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:max="255"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/label_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="@dimen/max_button_width" />

</androidx.constraintlayout.widget.ConstraintLayout>
